<resources>
    <string name="app_name">麦子秒到</string>
    <string name="title_invite">邀请好友免息</string>
    <string name="title_tie">提额</string>
    <string name="title_account">  </string>
    <string name="userLogin">登陆</string>
    <string name="userReg">新用户注册</string>
    <string name="reg">注册</string>
    <string name="PhotoNum">手机号</string>
    <string name="Pwd">密码</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="PerfectInfo">完善资料</string>
    <string name="Prompt">提示</string>
    <string name="loginOut_Prompt">是否退出登录?</string>
    <string name="loadMessage">数据加载中，请稍后...</string>
    <string name="setPayPwd">修改支付密码</string>
    <string name="setloginPwd">修改登录密码</string>
    <string name="login_reg">一键注册</string>
    <string name="login_backPwd">找回密码</string>
    <string name="reg_inputAccountHint">请输入正确的手机号</string>
    <string name="reg_invited_code">如有邀请码,请填写6位邀请码</string>
    <string name="reg_inputPwdHint">6-20位密码，必须含大小写字母、数字</string>
    <string name="reg_inputPwdMessage">请输入6-20位数字和字母组合,必须包含大写字母</string>
    <string name="reg_inputInviteMessage">请输入6位验证码</string>
    <string name="reg_inputcodeHint">请输入验证码</string>
    <string name="reg_getCode">获取验证码</string>
    <string name="reg_message_1">已有本程序账号？</string>
    <string name="reg_message_2">注册即代表您同意</string>
    <string name="reg_message_3">《麦子秒到注册协议》</string>
    <string name="main_menu_text_1">贷款</string>
    <string name="main_menu_text_2">免息</string>
    <string name="main_menu_text_3">提额</string>
    <string name="main_menu_text_4">我的</string>
    <string name="loan_message_1">申请贷款额度</string>
    <string name="loan_message_2">贷款期限:</string>
    <string name="loan_message_3">到期应还:</string>
    <string name="loan_message_4">费率计算</string>
    <string name="loan_message_5">申请开户不会产生任何费用</string>
    <string name="loan_message_6">立即申请开户</string>
    <string name="loan_message_7">版权所有，仿冒必究</string>
    <string name="backUserPwd_message_1">请输入手机号</string>
    <string name="backUserPwd_message_2">请输入身份证</string>
    <string name="backUserPwd_message_3">请输入新密码，6-12位的数字和字母组合</string>
    <string name="ratecalculation_message_1">贷款金额</string>
    <string name="ratecalculation_message_2">贷款期限</string>
    <string name="ratecalculation_message_3">应还金额</string>
    <string name="ratecalculation_message_4">费用说明</string>
    <string name="set">修改</string>
    <string name="ok">确定</string>
    <string name="dialog_title">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="name">姓名</string>
    <string name="name1">真实姓名</string>
    <string name="idNumber">身份证号</string>
    <string name="netWorkErr">请检查网络设置</string>
    <string name="netWorkErr_1">请程序权限，无法获取imei</string>
    <string name="loginOut">注销登录</string>
    <string name="money_Company">元</string>
    <string name="backMessage">资料尚未完整，确认放弃填写？</string>
    <string name="account_message_1">我的银行卡</string>
    <string name="account_message_2">历史账单</string>
    <string name="account_message_3">邀请好友</string>
    <string name="account_message_4">我的免息券</string>
    <string name="account_message_5">关注我们</string>
    <string name="account_message_6">帮助中心</string>
    <string name="account_message_7">安全设置</string>
    <string name="account_message_8">更多</string>
    <string name="account_message_9">赢免息券</string>
    <string name="account_message_10">共0张免息券可用</string>
    <string name="icbc">中国工商银行</string>
    <string name="carType_1">储蓄卡</string>
    <string name="personal_message">身份证信息将通过公安部认证，非本人信息不得通过审核</string>
    <string name="personal_message_1">身份证人像面</string>
    <string name="personal_message_2">身份证国徽面</string>
    <string name="personal_message_3">确认并提交</string>
    <string name="personal_message_4">第1/5步</string>
    <string name="personal_message_5">请先拍摄身份证人像面</string>
    <string name="personal_message_6">请输入姓名</string>
    <string name="personal_message_7">请输入身份证号</string>
    <string name="personal_message_8">请确认身份证信息准确无误后，再提交!</string>
    <string name="personal_message_9">请保持人面向上</string>
    <string name="personal_message_12">请保持国徽向上</string>
    <string name="personal_message_10">拍摄人像面</string>
    <string name="personal_message_11">拍摄国徽面</string>
    <string name="personal_message_13">请先拍摄身份证</string>
    <string name="personal_message_14">个人身份证</string>
    <string name="bind_card_message_1">请绑定常用银行储蓄卡，用于提现和还款</string>
    <string name="bind_card_message_2">银行卡号</string>
    <string name="bind_card_message_3">开户银行</string>
    <string name="bind_card_message_4">开户城市</string>
    <string name="bind_card_message_5">预留手机号</string>
    <string name="bind_card_message_6">短信验证码</string>
    <string name="bind_card_message_7">请输入银行卡号</string>
    <string name="bind_card_message_8">填写卡号后自动识别银行</string>
    <string name="bind_card_message_9">请选择开户城市</string>
    <string name="bind_card_message_10">请输入银行预留手机号码</string>
    <string name="bind_card_message_11">请输入短信验证码</string>
    <string name="bind_card_message_12">必须使用本人的银行储蓄卡,否则无法绑定成功</string>
    <string name="bind_card_message_13">第2/5步</string>
    <string name="bind_card_message_14">绑定银行储蓄卡</string>
    <string name="bind_card_message_15">请选择开户城市</string>
    <string name="operationSucc">操作成功!</string>
    <string name="selectorBank">请选择银行</string>
    <string name="selectorContacts">请选择联系人</string>
    <string name="basic_message_1">基本信息</string>
    <string name="basic_message_2">第3/5步</string>
    <string name="basic_message_3">详细、真实的信息可加快审核、提高额度</string>
    <string name="basic_message_4">填写规范 ></string>
    <string name="basic_message_5">居住地址</string>
    <string name="basic_message_6">详细地址</string>
    <string name="basic_message_7">地址需精确到门牌号，例：幸福路6号幸福小区6幢601室</string>
    <string name="basic_message_8">工作地址</string>
    <string name="basic_message_9">请选择工作城市</string>
    <string name="basic_message_10">单位名称</string>
    <string name="basic_message_11">请填写工作单位(公司、实体店等)</string>
    <string name="basic_message_12">单位电话</string>
    <string name="basic_message_13">请填写工作单位固定电话</string>
    <string name="basic_message_14">请选择居住地址</string>
    <string name="basic_message_15">请选择工作城市</string>
    <string name="basic_message_16">请填写详细居住地址</string>
    <string name="basic_message_17">请填写单位名称</string>
    <string name="basic_message_18">请填写单位电话</string>
    <string name="contacts_message_1">请添加三位联系人，</string>
    <string name="contacts_message_2">并修改联系人姓名为真实姓名</string>
    <string name="contacts_message_3">紧急联系人</string>
    <string name="contacts_message_4">第4/5步</string>
    <string name="contacts_message_5">家人</string>
    <string name="contacts_message_6">朋友</string>
    <string name="contacts_message_7">同事</string>
    <string name="contacts_message_8">请选择一位您的亲属</string>
    <string name="contacts_message_9">请选择一位您的朋友</string>
    <string name="contacts_message_10">请选择一位您的同事</string>
    <string name="withdrawals_message_1">提现处理中...</string>
    <string name="withdrawals_message_2">提现已到账</string>
    <string name="withdrawals_message_3">当前应还金额:</string>
    <string name="withdrawals_message_4">本次提现金额</string>
    <string name="withdrawals_message_5">用途</string>
    <string name="withdrawals_message_6">购物</string>
    <string name="withdrawals_message_7">提现密码</string>
    <string name="withdrawals_message_8">请设置提现密码</string>
    <string name="withdrawals_message_9">立即提现</string>
    <string name="withdrawals_message_10">到账金额</string>
    <string name="withdrawals_message_11">提现到</string>
    <string name="withdrawals_message_12">到期还款日</string>
    <string name="withdrawals_message_13">邀请好友送免息券</string>
    <string name="withdrawals_message_14">我知道了</string>
    <string name="withdrawals_message_15">请输入提现密码</string>
    <string name="withdrawals_message_16">申请提现金额</string>
    <string name="withdrawals_message_17">请填写问卷</string>
    <string name="withdrawals_message_18">您离审核通过还差最后一步\n您需要完成一份问卷调查\n问卷开始后,请立即完成,不要中途退出。</string>
    <string name="withdrawals_message_20">填写完成</string>
    <string name="withdrawals_message_21">设置提现密码</string>
    <string name="withdrawals_message_22">请选择用途</string>
    <string name="withdrawals_message_19">立即填写</string>
    <string name="withdrawals_message_23">问卷调查</string>
    <string name="withdrawals_message_24">提交</string>
    <string name="withdrawals_message_25">请填写完再提交答案</string>
    <string name="withdrawals_message_26">调查问卷错误次数超过三次</string>
    <string name="withdrawals_message_27">调查问卷错误次数超过三次</string>
    <string name="penddingaudit_message_1">资料已提交,请等待审核</string>
    <string name="penddingaudit_message_2">您的资料成功提交,已进入快速审核通道。
        \n\n麦子速贷承诺确保您的信息安全，您提交的资料仅作本次贷款申请试用，不会提供给任何第三方机构
        \n\n审核期间，您的资料暂不可修改\n\n已经审核通过，我们将在第一时间通知您，请保持手机开机</string>
    <string name="penddingaudit_message_3">了解更多试用技巧</string>
    <string name="repayment_message_1">贷款金额</string>
    <string name="repayment_message_2">利息等综合费用</string>
    <string name="repayment_message_3">到期还款日</string>
    <string name="repayment_message_4">距离到期还款日</string>
    <string name="repayment_message_5">使用免息券</string>
    <string name="repayment_message_6">立即还款</string>
    <string name="repayment_message_7">已逾期</string>
    <string name="setWith_message_1">请输入提现密码</string>
    <string name="setWith_message_2">请再次输入提现密码</string>
    <string name="setWith_message_3">安全验证</string>
    <string name="setWith_message_4">请输入登陆密码</string>
    <string name="setWith_message_5">请输入身份证后6位</string>
    <string name="setWith_message_6">两次密码输入不一致!</string>
    <string name="LoanFail_messgae_1">贷款申请失败</string>
    <string name="save">保存</string>
    <string name="sign">签到</string>
    <string name="star">z我的等级</string>
    <string name="icbc_message">工商银行</string>
    <string name="VerificationCode">验证码</string>
    <string name="allName">姓名:</string>
    <string name="allIdCard">身份证:</string>
    <string name="setting"> 修改</string>
    <string name="selector">选择</string>
    <string name="SysErrMsg">系统错误!</string>
    <string name="Viedo_message_1">视频认证</string>
    <string name="Viedo_message_2">最后一步</string>
    <string name="Viedo_message_3">请跟着女生提示，按要求录制视频，确保朗读准确无误</string>
    <string name="Viedo_message_5">请大声朗读以下文字</string>
    <string name="record">录制视频</string>
    <string name="restartRecord">重新录制</string>
    <string name="recordSucc">录制完毕</string>
    <string name="recordMessage_1">文件已不存在!</string>
    <string name="all_Product_message_1">居住地址:</string>
    <string name="all_Product_message_2">工作地址:</string>
    <string name="all_Product_message_3">单位名称:</string>
    <string name="all_Product_message_4">单位电话:</string>
    <string name="all_Product_message_5">家人:</string>
    <string name="all_Product_message_6">朋友:</string>
    <string name="all_Product_message_7">同事:</string>
    <string name="all_Product_message_8">同意</string>
    <string name="all_Product_message_9">《贷款相关协议》</string>
    <string name="all_Product_message_10">申请开户</string>
    <string name="all_Product_message_11">认证图像未提交</string>
    <string name="all_Product_message_12">认证视频未提交</string>
    <string name="all_Product_message_13">认证图像审核中</string>
    <string name="all_Product_message_14">认证图像审核成功</string>
    <string name="all_Product_message_15">认证图像审核失败</string>
    <string name="perfeceInfo_message_1">请完善以下资料</string>
    <string name="perfeceInfo_message_2">完善以下资料，即可获得最高5000元额度贷款</string>
    <string name="perfeceInfo_message_3">身份信息</string>
    <string name="perfeceInfo_message_4">身份证页面不清晰或不完整，请重新拍摄并提交</string>
    <string name="perfeceInfo_message_5">银行卡信息</string>
    <string name="perfeceInfo_message_6">银行卡信息验证有误，请重新录入并提交</string>
    <string name="perfeceInfo_message_7">基本信息</string>
    <string name="perfeceInfo_message_8">基本信息验证有误，请重新录入并提交</string>
    <string name="perfeceInfo_message_9">联系人信息</string>
    <string name="perfeceInfo_message_10">联系人信息验证有误，请重新录入并提交</string>
    <string name="perfeceInfo_message_11">影像信息</string>
    <string name="perfeceInfo_message_12">影像信息验证有误，请重新录入并提交</string>
</resources>