<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/viewPaddingTop"
        android:background="@color/whiteColor"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_account"
            style="@style/EditTextStyle"
            android:hint="@string/PhotoNum"
            android:inputType="number" />

        <View style="@style/LineViewStyle1" />

        <EditText
            android:id="@+id/login_pwd"
            style="@style/EditTextStyle"
            android:hint="@string/Pwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_submit"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d10"
        android:layout_marginRight="@dimen/d10"
        android:layout_marginTop="15dp"
        android:padding="@dimen/editTextPadding">

        <Button
            android:id="@+id/login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparentColor"
            android:text="@string/login_reg"
            android:textColor="@color/appColor"
            android:textSize="@dimen/uiContentTextSize_m" />

        <Button
            android:id="@+id/login_backPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparentColor"
            android:text="@string/login_backPwd"
            android:textColor="@color/appColor"
            android:textSize="@dimen/uiContentTextSize_m" />
    </RelativeLayout>

</LinearLayout>